--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.2.2",
+    "lodash": "^4.17.10",
     "morgan": "~1.9.0",
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.5"
