--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "morgan": "~1.9.0",
+    "nodemailer": "^4.6.7",
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.5"
   },
