--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./tests --recursive"
   },
   "dependencies": {
     "argon2": "^0.19.3",
@@ -20,5 +21,9 @@
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0"
+  }
 }
