--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.10",
     "morgan": "~1.9.0",
     "nodemailer": "^4.6.7",
+    "pdfkit": "^0.8.3",
     "pg-promise": "^5.9.7",
     "serve-favicon": "~2.4.5"
   },
